# play-evmone-lite

./: Cargo.toml  README.md
src/: evmc.rs  main.rs
