[package]
name = "play-evmone-lite"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmc-sys = "7.1.0"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"